Top spacing fixed

--- a/src/scss/archive.scss
+++ b/src/scss/archive.scss
@@ -1,5 +1,5 @@
 .archive-section {
-    padding-top: 70px;
+    padding-top: 10px;
 }
 
 .archive-title {
